syntax = "proto3";

package calculo;

service Calculadora {
  rpc Suma(SumaRequest) returns (OperacionResponse) {}

  rpc Resta(RestaRequest) returns (OperacionResponse) {}

  rpc Operacion(OperacionRequest) returns (OperacionResponse) {}
}

// Solicitud suma
message SumaRequest {
  float num1 = 1;
  float num2 = 2;
}

// Solicitud resta
message RestaRequest {
  float num1 = 1;
  float num2 = 2;
}

// Solicitud Operacion
message OperacionRequest {
  string operacion = 1; // Aquí se corrigió añadiendo 'string' como tipo de dato para 'operacion'
}

// Respuesta
message OperacionResponse {
  float resultado = 1;
}
